<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_applicationId" tools:ignore="MissingTranslation">YourFacebookAppId</string>
    <string name="facebook_applicationClientToken" tools:ignore="MissingTranslation">YourApplicationClientToken</string>
    <string name="app_name" tools:ignore="MissingTranslation">Opcon</string>
    <string name="app_name_beta" tools:ignore="MissingTranslation">Opcon</string>
    <string name="version" tools:ignore="MissingTranslation">Version</string>
    <string name="version_name" tools:ignore="MissingTranslation">Version name</string>
    <string name="build_number" tools:ignore="MissingTranslation">Version number</string>
    <string name="developer" tools:ignore="MissingTranslation">Developer</string>
    <string name="my_email" tools:ignore="MissingTranslation">taskiranmahmutt@gmail.com</string>
    <string name="shared_preferences" tools:ignore="MissingTranslation">opcon_shared_preferences</string>
    <string name="are_you_sure" tools:ignore="MissingTranslation">Are you sure?</string>
    <string name="time_restrict_range" tools:ignore="MissingTranslation">Time girange restrict</string>
    <string name="time_restrict_date" tools:ignore="MissingTranslation">Date restrict</string>
    <string name="chargelow_ifdown" tools:ignore="MissingTranslation">fall under</string>
    <string name="location_near" tools:ignore="MissingTranslation">%s m near</string>
    <string name="mm" tools:ignore="MissingTranslation">m</string>
    <string name="location_select_a_location" tools:ignore="MissingTranslation">Please select an location.</string>
    <string name="location_please_enter_near_info" tools:ignore="MissingTranslation">How close is to your selected location.</string>
    <string name="static_image_cannot_load" tools:ignore="MissingTranslation">There is an internet connection issue.</string>
    <string name="charge_low_alert_select_a_percent" tools:ignore="MissingTranslation">Please specify degree of charge.</string>
    <string name="notification_alert_please_enter_any_special_packet_or_text" tools:ignore="MissingTranslation">Please enter an text message or select a special packet.</string>
    <string name="notification_sound_please_select_a_sound" tools:ignore="MissingTranslation">Please select a welcome notification tone in your hear.</string>
    <string name="notifier_creation_save_it" tools:ignore="MissingTranslation">Submit</string>
    <string name="please_select_a_condition" tools:ignore="MissingTranslation">Please select an condition.</string>
    <string name="please_select_a_operation" tools:ignore="MissingTranslation">Please select an operation.</string>
    <string name="_condition_is_time" tools:ignore="MissingTranslation">Alarm</string>
    <string name="_condition_is_location" tools:ignore="MissingTranslation">When he at the that location</string>
    <string name="_condition_in_call" tools:ignore="MissingTranslation">When he received a call</string>
    <string name="_condition_out_call" tools:ignore="MissingTranslation">When he make an call</string>
    <string name="_condition_in_msg" tools:ignore="MissingTranslation">When he received a message</string>
    <string name="_condition_out_msg" tools:ignore="MissingTranslation">When he send a message</string>
    <string name="_condition_battery" tools:ignore="MissingTranslation">If charge of her phone is low than</string>
    <string name="_condition_new_picture" tools:ignore="MissingTranslation">When he captured an new photo</string>
    <string name="_operation_sent_msg" tools:ignore="MissingTranslation">Send message to me</string>
    <string name="__operation_play_sound" tools:ignore="MissingTranslation">Notify me</string>
    <string name="_operation_play_sound" tools:ignore="MissingTranslation">Notify him</string>
    <string name="packet_in_message" tools:ignore="MissingTranslation">Last incoming message of him</string>
    <string name="packet_out_message" tools:ignore="MissingTranslation">Last outgoing message of him</string>
    <string name="packet_in_call" tools:ignore="MissingTranslation">Last incoming call of him</string>
    <string name="packet_out_call" tools:ignore="MissingTranslation">Last outgoing call of him</string>
    <string name="packet_location" tools:ignore="MissingTranslation">Location of him</string>
    <string name="packet_battery_state" tools:ignore="MissingTranslation">Battery degree of her phone</string>
    <string name="interpreter_sender_time" formatted="false" tools:ignore="MissingTranslation">%02d:%02d</string>
    <string name="interpreter_sender_location" tools:ignore="MissingTranslation"><![CDATA[<font color="blue">%2$s</font> m near of %1$s]]></string>
    <string name="interpreter_receiver_location" tools:ignore="MissingTranslation"><![CDATA[<font color="blue">%2$s</font> m near of %1$s]]></string>
    <string name="interpreter_sender_charge" tools:ignore="MissingTranslation">If charge of her phone is low than %%%d.</string>
    <string name="interpreter_receiver_charge" tools:ignore="MissingTranslation">If charge of your phone is low than %%%d.</string>
    <string name="interpreter_sender_incoming_call" tools:ignore="MissingTranslation">When %s call to him.</string>
    <string name="interpreter_receiver_incoming_call" tools:ignore="MissingTranslation">When %s call to you.</string>
    <string name="interpreter_sender_outgoing_call" tools:ignore="MissingTranslation">When he call to %s.</string>
    <string name="interpreter_receiver_outgoing_call" tools:ignore="MissingTranslation">When you call to %s.</string>
    <string name="interpreter_sender_incoming_message" tools:ignore="MissingTranslation">When %s send a message to him.</string>
    <string name="interpreter_receiver_incoming_message" tools:ignore="MissingTranslation">When %s send a message to you.</string>
    <string name="notifier_choice_toogle_stop" tools:ignore="MissingTranslation">Deactive</string>
    <string name="notifier_choice_show_details" tools:ignore="MissingTranslation">See details of this notifier</string>
    <string name="notifier_choice_edit" tools:ignore="MissingTranslation">Edit</string>
    <string name="notifier_choice_share" tools:ignore="MissingTranslation">Share it</string>
    <string name="notifier_choice_delete" tools:ignore="MissingTranslation">Delete</string>
    <string name="add_notifier" tools:ignore="MissingTranslation">Send notifier</string>
    <string name="invite" tools:ignore="MissingTranslation">Invite</string>
    <string name="notifier_choice_show_logs" tools:ignore="MissingTranslation">Show notifications</string>
    <string name="settings_rigtone" tools:ignore="MissingTranslation">Dialog notifications</string>
    <string name="as_dialog_enter_to_send" tools:ignore="MissingTranslation">Enter button will be send</string>
    <string name="as_dialog_enable_ringtone" tools:ignore="MissingTranslation">Dialog notification sound</string>
    <string name="as_notifier_notification_vibrate" tools:ignore="MissingTranslation">Vibrate</string>
    <string name="as_dialog" tools:ignore="MissingTranslation">Dialog</string>
    <string name="as_notifier_notifications" tools:ignore="MissingTranslation">Notifier notifications</string>
    <string name="as_account" tools:ignore="MissingTranslation">Account</string>
    <string name="as_about" tools:ignore="MissingTranslation">About and privacy/copyright information</string>
    <string name="as_about_summary" tools:ignore="MissingTranslation">Feedback, privacy, copyright…</string>
    <string name="as_account_summary" tools:ignore="MissingTranslation">Block users, delete your account</string>
    <string name="as_dialog_summary" tools:ignore="MissingTranslation">Dialog notification settings, vibrate, sound</string>
    <string name="as_dialog_enable_ringtone_on" tools:ignore="MissingTranslation">Notify when message received</string>
    <string name="as_dialog_enable_ringtone_off" tools:ignore="MissingTranslation">Do not notify when message received</string>
    <string name="as_dialog_enter_to_send_on" tools:ignore="MissingTranslation">When \'enter button\' pressed on keyboard then message will send.</string>
    <string name="as_dialog_enter_to_send_off" tools:ignore="MissingTranslation">To send a message you have to press to \'send\' button</string>
    <string name="as_notifier_notification_ringtone" tools:ignore="MissingTranslation">Notifications of your notifier is open.</string>
    <string name="as_notifier_notification_ringtone_on" tools:ignore="MissingTranslation">When situation of your notifiers changes you will notify. (deleted, stopped, activated)</string>
    <string name="as_notifier_notification_ringtone_off" tools:ignore="MissingTranslation">If you choose that than event of your notifiers do not notify to you. (deleted, stopped, activated)</string>
    <string name="as_notifier_notification_ringtone_title" tools:ignore="MissingTranslation">Notification tone</string>
    <string name="notification_off" tools:ignore="MissingTranslation">Close notifications</string>
    <string name="notification_sound_on" tools:ignore="MissingTranslation">Open notification sound</string>
    <string name="non_black" tools:ignore="MissingTranslation">Unblock user</string>
    <string name="refresh" tools:ignore="MissingTranslation">Refresh</string>
    <string name="see_relation_notifier" tools:ignore="MissingTranslation">See relation notifier</string>
    <string name="invite_your_friends" tools:ignore="MissingTranslation">Invite your friends</string>
    <string name="special_thanks" tools:ignore="MissingTranslation">Thanks for</string>
    <string name="special_thanks_for_my_family" tools:ignore="MissingTranslation">My family for their beliefs and support</string>
    <string name="special_thanks_for_Dennis" tools:ignore="MissingTranslation">Dennis Ritchie</string>
    <string name="special_thanks_for_Stackowerflow" tools:ignore="MissingTranslation">Stack Overflow Community</string>
    <string name="as_about_feedback" tools:ignore="MissingTranslation">Feedback</string>
    <string name="as_about_feedback_subtitle" tools:ignore="MissingTranslation">Please enter your wish or suggestion or complaint</string>
    <string name="as_about_about" tools:ignore="MissingTranslation">About</string>
    <string name="as_notifier_notifications_summary" tools:ignore="MissingTranslation">Notifier notifications</string>
    <string name="close_notification_for_notifier" tools:ignore="MissingTranslation">Don\'t disturb</string>
    <string name="acception_automated_packet_send" tools:ignore="MissingTranslation">Send relation packet witout approval of mine.</string>
    <string name="special_thanks_for_Githup" tools:ignore="MissingTranslation">Developers of third-party-frameworks and community of Githup</string>
    <string name="privacy_activity_title" tools:ignore="MissingTranslation">Terms of Service and Privacy Policy</string>
    <string name="copy_right_information" tools:ignore="MissingTranslation">Copyright information</string>
    <string name="third_party_frameworks" tools:ignore="MissingTranslation">Third party frameworks</string>
    <string name="contact_activity_there_is_no_friend_message" tools:ignore="MissingTranslation">There is no friend who using Opcon. If you want to chat or sent notifiers to your friends you have to invite your friends to Opcon. \n\nIf you are sure about there is friends who using Opcon, touch \'refresh\' button.</string>
    <string name="thanks">Thanks</string>
    <string name="to_my_family">My family</string>
    <string name="to_experts">Dennis Ritchie, Linus Torvalds and each other experts.</string>
    <string name="to_stackoverflow">Stack Overflow and community</string>
    <string name="to_developers">Developers of open source frameworks that i used to develop Opcon.</string>
</resources>