<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- These settings headers are only used on tablets. -->

  <header
      android:fragment="com.opcon.libs.settings.SettingsActivity$DialogPreferencesFragment"
      android:summary="@string/as_dialog_summary"
      android:icon="@drawable/ic_comments"
      android:title="@string/as_dialog"/>

  <header
      android:fragment="com.opcon.libs.settings.SettingsActivity$NotifierNotificationPreferenceFragment"
      android:title="@string/as_notifier_notifications"
      android:icon="@drawable/ic_notifications_primary"
      android:summary="@string/as_notifier_notifications_summary"/>

  <header
      android:fragment="com.opcon.libs.settings.SettingsActivity$AccountPreferenceFragment"
      android:summary="@string/as_account_summary"
      android:icon="@drawable/ic_person_primary"
      android:title="@string/as_account"/>

  <header
      android:fragment="com.opcon.libs.settings.SettingsActivity$AboutPreferenceFragment"
      android:summary="@string/as_about_summary"
      android:icon="@drawable/ic_help_primary"
      android:title="@string/as_about"/>

</preference-headers>
