<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


  <CheckBoxPreference
      android:title="@string/as_notifier_notification_ringtone"
      android:key="notifier_ringtone_state"
      android:summaryOn="@string/as_notifier_notification_ringtone_on"
      android:defaultValue="true"
      android:summaryOff="@string/as_notifier_notification_ringtone_off"/>

  <RingtonePreference
      android:title="@string/as_notifier_notification_ringtone_title"
      android:ringtoneType="notification"
      android:key="notifier_ringtone"/>

  <ListPreference android:title="@string/as_notifier_notification_vibrate"
                  android:key="notifier_vibrate"
                  android:summary="%s"
                  android:defaultValue="0"
                  android:entries="@array/arr_vibrate"
                  android:entryValues="@array/arr_vibrate_values"/>
</PreferenceScreen>
