<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.opcon.libs.settings.AboutActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="false">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/materialGrey"
            android:text="@string/version"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/versionNumber"
            android:layout_margin="10dp"/>
      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="false"
        android:layout_marginTop="20dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/materialGrey"
            android:text="@string/version_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/versionName"
            android:layout_margin="10dp"/>
      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="false"
        android:layout_marginTop="20dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/materialGrey"
            android:text="@string/developer"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Mahmut Taşkıran"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/my_email"/>
      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="false"
        android:layout_marginTop="20dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGrey"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/materialGrey"
            android:text="@string/special_thanks"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/special_thanks_for_my_family"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/special_thanks_for_Dennis"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/special_thanks_for_Githup"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/special_thanks_for_Stackowerflow"/>
      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>



</ScrollView>
