<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/white"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardUseCompatPadding="true"
      app:cardElevation="2dp"
      android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <com.opcon.ui.views.CloudRelativeView
          android:layout_width="match_parent"
          android:layout_height="120dp"
          app:bgColor="@color/colorPrimary"
          app:maxIcon="10"
          app:iconMaxSize="1"
          app:iconColor="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_comments_smiley"
            android:tint="@color/white"
            android:layout_centerInParent="true"/>

      </com.opcon.ui.views.CloudRelativeView>

      <View
          android:layout_width="match_parent"
          android:layout_height="4dp"
          android:background="@drawable/linear"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/invite_your_friends"
          android:textSize="19sp"
          android:textStyle="bold"
          android:layout_marginTop="15dp"
          android:layout_marginLeft="16dp"/>


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="20dp"
          android:paddingRight="20dp"
          android:textSize="12dp"
          android:text="@string/contact_activity_there_is_no_friend_message"/>


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="right"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginBottom="10dp">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/invite"
            android:textSize="11sp"
            android:layout_margin="3dp"
            android:layout_marginLeft="10dp"
            android:text="@string/invite"
            android:background="@color/colorSecondary"
            android:textColor="@color/white"
            android:layout_height="30dp"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:id="@+id/refresh"
            android:layout_toLeftOf="@id/invite"
            android:textSize="11sp"
            android:text="@string/refresh"
            android:background="@color/white"
            android:textColor="@color/materialGrey"
            android:layout_height="30dp"/>


      </RelativeLayout>




    </LinearLayout>


  </android.support.v7.widget.CardView>


</LinearLayout>